[package]
name = "pingo_pongo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glommio = { path = "../glommio/glommio" }
nix = "*"
futures-lite = "*"
tokio = { version = "*", features = ["full"] }

[profile.release]
opt-level = 3
debug = true